<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.cishell.applications</groupId>
	<artifactId>root-module</artifactId>
	<version>2.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<!-- <module>epic_tool</module>-->
		<!-- <module>nwb</module> -->
		<module>sci2</module>
	</modules>

	<properties>
		<tychoVersion>0.21.0</tychoVersion>
		<memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
		<memoryOptions2>-XX:MaxPermSize=256m</memoryOptions2>
		<!-- <cishellCoreUpdateSite>file:///${basedir}/../../../../CIShell/update-site/target/repository</cishellCoreUpdateSite> -->
		<cishellCoreUpdateSite>https://cishell.jfrog.io/cishell/milestones/core-updates/</cishellCoreUpdateSite>
		<!-- <cishellPluginsUpdateSite>file:///${basedir}/../../../../cishell-plugins/update-site/target/repository</cishellPluginsUpdateSite> -->
		<cishellPluginsUpdateSite>https://cishell.jfrog.io/cishell/milestones/plugin-updates/</cishellPluginsUpdateSite>
	</properties>

	<repositories>
		<repository>
			<id>Indigo</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/eclipse/updates/3.7</url>
			<releases>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</releases>
		</repository>
		<repository>
			<id>eclipse-orbit</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20151118145958/repository</url>
			<releases>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</releases>
		</repository>
		<repository>
			<id>cishell-core</id>
			<url>${cishellCoreUpdateSite}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>cishell-plugins</id>
			<url>${cishellPluginsUpdateSite}</url>
			<layout>p2</layout>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tychoVersion}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tychoVersion}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tychoVersion}</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tychoVersion}</version>
				<configuration>
					<environments>
						<!-- Win 32 -->
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<!-- Mac -->
						<environment>
							<os>macosx</os>
							<ws>carbon</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86</arch>
						</environment>
						<!-- Linux -->
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jfrog.buildinfo</groupId>
				<artifactId>artifactory-maven-plugin</artifactId>
				<version>2.6.1</version>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>build-info</id>
						<goals>
							<goal>publish</goal>
						</goals>
						<configuration>
							<deployProperties>
								<groupId>${project.groupId}</groupId>
								<artifactId>${project.artifactId}</artifactId>
								<version>${project.version}</version>
							</deployProperties>
							<publisher>
								<contextUrl>https://cishell.jfrog.io/cishell</contextUrl>
								<username>${username}</username>
								<password>${password}</password>
								<repoKey>libs-release-local</repoKey>
								<snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
								<excludePatterns>*.zip</excludePatterns>
							</publisher>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<pluginRepositories>
		<pluginRepository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>bintray-plugins</name>
			<url>http://jcenter.bintray.com</url>
		</pluginRepository>
	</pluginRepositories>
</project>